@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2008 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.591 2008-03-02 20:50:23 martin Exp $
+# $Id: CHANGES,v 1.592 2008-03-02 20:54:09 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (GPL). If you
@@ -10,6 +10,8 @@
 # --
 
 CVS HEAD (????/??/??)
+ - (2008/03/02) Added title of object to div tag of linked objects to have an
+    preview to the content of a linked object.
  - (2008/03/01) Added missing ticket title to ticket search mask in agent
     and generic agent interface.
  - (2008/02/22) Improved performance of TicketSearch() function (what is improved? in which cases? how fast is the improvement?).
